add weather icons

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "font-awesome": "^4.7.0",
         "laravel-mix": "^2.1.11",
         "vue": "^2.5.16",
-        "vue-masonry": "^0.11.4"
+        "vue-masonry": "^0.11.4",
+        "weathericons": "^2.1.0"
     },
     "browserslist": [
         ">0.25%",
