--- a/package.json
+++ b/package.json
@@ -29,6 +29,14 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "eslint": "^5.3.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-config-standard": "^11.0.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-node": "^7.0.1",
+        "eslint-plugin-promise": "^3.8.0",
+        "eslint-plugin-standard": "^3.1.0",
         "purify-css": "^1.2.5",
         "purifycss-webpack": "^0.7.0"
     }
