--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "dotenv": "^6.0.0",
         "font-awesome": "^4.7.0",
         "laravel-mix": "^2.1.11",
+        "moment": "^2.22.2",
         "vue": "^2.5.16",
+        "vue-hotel-datepicker": "^2.2.4",
         "vue-masonry": "^0.11.4",
         "weathericons": "^2.1.0"
     },
