--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue": "^2.5.16",
         "vue-hotel-datepicker": "^2.2.4",
         "vue-masonry": "^0.11.4",
+        "vue-simple-calendar": "^3.0.2",
         "weathericons": "^2.1.0"
     },
     "browserslist": [
